Adjust the shadowed utility class

--- a/source/index.haml
+++ b/source/index.haml
@@ -12,10 +12,11 @@
         %h1 Slide Title
         %p This is standard slide.
 
-  %slide
+  %slide.slide--subdue
     .slide-content
       .middle.middle--lrg.tac
         %h1.tci.shadowed Cool Slide Title
+        %p.tci It has a shadow and stuff!
 
   %slide.slide--light
     .slide-content
