Update the slide shadow style

--- a/source/index.haml
+++ b/source/index.haml
@@ -15,6 +15,12 @@
   %slide.slide--subdue
     .slide-content
       .middle.middle--lrg.tac
+        %h1.tci.shh Cool Slide Title
+        %p.tci It has a shadow and stuff!
+
+  %slide.slide--subdue
+    .slide-content
+      .middle.middle--lrg.tac
         %h1.tci.shadowed Cool Slide Title
         %p.tci It has a shadow and stuff!
 
