Update the application name

--- a/source/index.haml
+++ b/source/index.haml
@@ -3,7 +3,7 @@
   %slide.slide--title
     .slide-content
       .middle.tac
-        %h1.mbxs Presenter
+        %h1.mbxs GIFNote
         %p Drew Barontini &mdash; @drewbarontini
 
   %slide
