--- a/source/assets/stylesheets/_config.sass
+++ b/source/assets/stylesheets/_config.sass
@@ -1,15 +1,13 @@
 // *************************************
 //
 //   Config
-//   -> Custom Override Settings
+//   -> Custom settings
 //
 // *************************************
 
 // -------------------------------------
-//   Variables
+//   Base
 // -------------------------------------
-
-// ----- Base ----- //
 
 //$b-borderColor: #292b2f
 //$b-borderStyle: solid
@@ -19,7 +17,9 @@
 //$b-boxShadow: 0 1px 2px rgba(#222, 0.25)
 //$b-lineHeight: 1.5
 
-// ----- Colors ----- //
+// -------------------------------------
+//   Colors
+// -------------------------------------
 
 //$c-background: #f2f2f2
 //$c-base: #292b2f
@@ -31,77 +31,122 @@
 //$c-success: #238063
 //$c-warning: #c18f2a
 
-// ----- Fonts ----- //
+// -------------------------------------
+//   Fonts
+// -------------------------------------
 
-// Google @font-face URL
+// ----- Google @font-face URL ----- //
+
 //$f-body-src: 'http://fonts.googleapis.com/css?family=Merriweather:400,300,700,400italic'
 //$f-header-src: 'http://fonts.googleapis.com/css?family=Oswald'
 
-// Font stacks
+// ----- Stacks ----- //
+
 //$f-base: 'Merriweather', sans-serif
 //$f-header: 'Oswald', sans-serif
 //$f-mono: Courier, monospace
 
-// ----- Progress ----- //
+// -------------------------------------
+//   Progress
+// -------------------------------------
 
 //$progress-background: rgba(#000, 0.75)
 //$progress-height: 4px
 
-// ----- Slide ----- //
+// -------------------------------------
+//   Slides
+// -------------------------------------
 
-// Colors
+// ----- Colors ----- //
+
+// Basic Slide
 
 //$slide-background: $c-light
 //$slide-color: $c-base
 
+// Dark Slide
+
 //$slide--dark-background: $c-base
 //$slide--dark-color: $c-invert
+
+// Error Slide
 
 //$slide--error-background: $c-error
 //$slide--error-color: $c-invert
 
+// Fade Slide
+
 //$slide--fade-background: $c-highlight
 //$slide--fade-color: $c-invert
+
+// Fade Dark Slide
 
 //$slide--fade--dark-background: #000
 //$slide--fade--dark-color: $c-invert
 
+// Fade Error Slide
+
 //$slide--fade--error-background: $c-error
 //$slide--fade--error-color: $c-invert
+
+// Fade Light Slide
 
 //$slide--fade--light-background: $c-invert
 //$slide--fade--light-color: $c-base
 
+// Fade Subdue Slide
+
 //$slide--fade--subdue-background: $c-subdue
 //$slide--fade--subdue-color: $c-base
+
+// Fade Success Slide
 
 //$slide--fade--success-background: $c-success
 //$slide--fade--success-color: $c-invert
 
+// Fade Warning Slide
+
 //$slide--fade--warning-background: $c-warning
 //$slide--fade--warning-color: $c-invert
+
+// Light Slide
 
 //$slide--light-background: $c-invert
 //$slide--light-color: $c-base
 
+// Subdue Slide
+
 //$slide--subdue-background: $c-subdue
 //$slide--subdue-color: $c-base
+
+// Success Slide
 
 //$slide--success-background: $c-success
 //$slide--success-color: $c-invert
 
+// Title Slide
+
 //$slide--title-background: $c-highlight
 //$slide--title-color: $c-invert
+
+// Video Slide
 
 //$slide--video-background: #000
 //$slide--video-color: $c-invert
 
+// Warning Slide
+
 //$slide--warning-background: $c-warning
 //$slide--warning-color: $c-invert
 
-// Options
+// ----- Options ----- //
+
+// Fade Slide Opacity
 
 //$slide--fade-opacity: 0.75
+
+// Transitions
+
 //$slide-transition: true
 //$slide-transition-delay: 0.2s
 //$slide-transition-speed: 0.4s
