--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -66,7 +66,10 @@ $c-warning: #c18f2a !default
 // ----- Fonts ----- //
 
 $f-base: 'Merriweather', sans-serif !default
+$f-base-light-fontWeight: 300 !default
 $f-header: 'Oswald', sans-serif !default
+$f-header-fontWeight: bold !default
+$f-header-uppercase: true !default
 $f-mono: Courier, monospace !default
 
 // ----- Breakpoint ----- //
