Only import one font, if the same
This adds a check to see if the the body font-face URL is the same as
the header one and, if so, only includes one.

--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -16,8 +16,11 @@ $f-header-src: 'http://fonts.googleapis.com/css?family=Oswald' !default
 
 // ----- Imports ----- //
 
-@import url($f-body-src)
-@import url($f-header-src)
+@if $f-body-src == $f-header-src
+  @import url($f-body-src)
+@else
+  @import url($f-body-src)
+  @import url($f-header-src)
 
 // -------------------------------------
 //   Variables
