Add a few more text utility classes

--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -377,6 +377,10 @@
 
 .tsh1
   font-size: $b-fontSize-h1
+.tsh1-l
+  font-size: 2 * $b-fontSize-h1
+.tsh1-xl
+  font-size: 4 * $b-fontSize-h1
 .tsh2
   font-size: $b-fontSize-h2
 .tsh3
