Update example title slide

--- a/source/index.haml
+++ b/source/index.haml
@@ -4,7 +4,7 @@
     .slide-content
       .middle.tac
         %h1.mbxs GIFPoint
-        %p Drew Barontini &mdash; @drewbarontini
+        %p.oph Drew Barontini &mdash; @drewbarontini
 
   %slide.slide--translateX
     .slide-content
