Update example slides

--- a/source/index.haml
+++ b/source/index.haml
@@ -82,7 +82,7 @@
       .middle.middle--lrg.tac
         = image_tag 'http://placehold.it/800x400', alt: 'Placeholder', class: 'slide-media'
 
-  %slide.slide--scale.slide--video
+  %slide.slide--translateY.slide--video
     .slide-content
       .middle.tac
         .slide-video
