Update example slides

--- a/source/index.haml
+++ b/source/index.haml
@@ -191,5 +191,5 @@
     .slide-content
       .bottom.full.tac
         .card
-          %p= link_to 'http://github.com/drewbarontini/gifpoint', 'http://github.com/drewbarontini/gifpoint', class: 'bdrn'
+          %p= link_to 'http://github.com/drewbarontini/gifpoint', 'http://github.com/drewbarontini/gifpoint'
 
