Use smart quotes for blockquotes

--- a/source/index.haml
+++ b/source/index.haml
@@ -111,8 +111,8 @@
     .slide-content
       .bottom
         %blockquote.mbxs
-          "What would happen if I put some longer, more thought-provoking
-          text here that fills up more space?"
+          What would happen if I put some longer, more thought-provoking text
+          here that fills up more space?
         %p &mdash; Drew Barontini
 
   %slide.slide--fade(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg' section)
