Update MVCSS to v4.0.0

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -1,6 +1,6 @@
 // *************************************
 //
-//   GIFPoint
+//   GIFPoint - MVCSS v4.0.0
 //   -> Manifest
 //
 // *************************************
@@ -14,7 +14,6 @@
 @import "foundation/reset"
 @import "foundation/helpers"
 @import "foundation/config"
-@import "foundation/tools"
 @import "foundation/base"
 
 // -------------------------------------
@@ -39,6 +38,12 @@
 // -------------------------------------
 
 @import "vendor/github"
+
+// -------------------------------------
+//   Foundation - Tools
+// -------------------------------------
+
+@import "foundation/tools"
 
 // -------------------------------------
 //   Inbox
