--- a/source/assets/stylesheets/components/_cell.sass
+++ b/source/assets/stylesheets/components/_cell.sass
@@ -6,7 +6,7 @@
 // *************************************
 
 .cell
-  margin: $b-whitespace auto
+  margin: $b-space auto
   max-width: $b-maxWidth
   position: relative
 
