--- a/source/assets/stylesheets/components/_row.sass
+++ b/source/assets/stylesheets/components/_row.sass
@@ -7,7 +7,7 @@
 
 .row
   overflow: hidden
-  padding: 0 $b-whitespace
+  padding: 0 $b-space
 
 // -------------------------------------
 //   Modifiers
