--- a/source/index.haml
+++ b/source/index.haml
@@ -15,7 +15,7 @@
   %slide.slide--subdue.slide--translateY
     .slide-content
       .middle.middle--lrg.tac
-        %h1.mbxs.tci.shadowed Cool Slide Title
+        %h1.mbxs.tci.tsa Cool Slide Title
         %p.tci It has a shadow and stuff!
 
   %slide.slide--light(section)
