--- a/source/assets/stylesheets/components/_bucket.sass
+++ b/source/assets/stylesheets/components/_bucket.sass
@@ -35,7 +35,7 @@
 
 .bucket-media
   float: left
-  margin-right: $b-whitespace
+  margin-right: $b-space
   > img
     display: block
     max-width: none
