--- a/source/assets/stylesheets/components/_card.sass
+++ b/source/assets/stylesheets/components/_card.sass
@@ -6,10 +6,10 @@
 // *************************************
 
 .card
-  background: $c-invert
+  background: $c-background-invert
   border-radius: $b-borderRadius
   box-shadow: $b-boxShadow
-  padding: $b-whitespace
+  padding: $b-space
   position: relative
 
 // -------------------------------------
@@ -24,8 +24,8 @@
 // ----- Sizes ----- //
 
 .card--xs
-  padding: $b-whitespace-xs
+  padding: $b-space-xs
 
 .card--s
-  padding: $b-whitespace-s
+  padding: $b-space-s
 
