--- a/source/assets/stylesheets/components/_grid.sass
+++ b/source/assets/stylesheets/components/_grid.sass
@@ -12,7 +12,7 @@
 // -------------------------------------
 
 $grid-columns: 12 !default
-$grid-defaults: "lap" 480px, "desk" 800px !default
+$grid-defaults: "s" 480px, "m" 800px !default
 $grid-gutter: 20px !default
 $grid-silent: false !default
 
