--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -30,6 +30,7 @@ $b-fontFamily-heading-src: 'http://fonts.googleapis.com/css?family=Oswald' !defa
 
 $c-background-invert: #fff !default
 $c-background: #f2f2f2 !default
+$c-border: #292b2f !default
 $c-error: #86341d !default
 $c-highlight: #2980b9 !default
 $c-light: #f2f2f2 !default
@@ -45,10 +46,9 @@ $c-warning: #c18f2a !default
 
 // ----- Borders & Box Shadow ----- //
 
-$b-borderColor: $c-text !default
 $b-borderStyle: solid !default
 $b-borderWidth: 4px !default
-$b-border: $b-borderWidth $b-borderStyle $b-borderColor
+$b-border: $b-borderWidth $b-borderStyle $c-border
 $b-borderRadius: 3px !default
 $b-boxShadow: 0 1px 2px rgba(#222, 0.25) !default
 
