--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -40,57 +40,6 @@ $c-text-invert: #fff !default
 $c-text: #292b2f !default
 $c-warning: #c18f2a !default
 
-// -------------------------------------
-//   Base
-// -------------------------------------
-
-// ----- Borders & Box Shadow ----- //
-
-$b-borderStyle: solid !default
-$b-borderWidth: 4px !default
-$b-border: $b-borderWidth $b-borderStyle $c-border
-$b-borderRadius: 3px !default
-$b-boxShadow: 0 1px 2px rgba(#222, 0.25) !default
-
-// ----- Typography ----- //
-
-$b-fontFamily-heading-fontWeight: bold !default
-$b-fontFamily-heading-uppercase: true !default
-$b-fontFamily-heading: 'Oswald', sans-serif !default
-$b-fontFamily-light-fontWeight: 300 !default
-$b-fontFamily-mono: Courier, monospace !default
-$b-fontFamily: 'Merriweather', sans-serif !default
-$b-fontSize-h1: 420% !default
-$b-fontSize-h2: 320% !default
-$b-fontSize-h3: 220% !default
-$b-fontSize-h4: 175% !default
-$b-fontSize-l: 150% !default
-$b-fontSize-m: 100% !default
-$b-fontSize-s: 80% !default
-$b-fontSize-xl: 200% !default
-$b-fontSize-xs: 60% !default
-$b-fontSize: 30px !default
-$b-lineHeight: 1.5 !default
-$b-textShadow: 6px 6px 0 rgba(#000, 0.25), 12px 12px 0 rgba(#000, 0.1) !default
-
-// ----- Sizing ----- //
-
-$b-minWidth: em(400px) !default
-$b-maxWidth: em(680px)default
-$b-space: em(40px) !default
-$b-space-xs: 0.25 * $b-space !default
-$b-space-s: 0.5 * $b-space !default
-$b-space-l: 2 * $b-space !default
-$b-space-xl: 4 * $b-space !default
-
-// ----- Settings ----- //
-
-$b-transitionSpeed: 0.4s !default
-
-// ----- Breakpoint ----- //
-
-$breakpoint-l: 1400px !default
-
 // ----- Structures ----- //
 
 // Progress
@@ -146,6 +95,80 @@ $slide--video-color: $c-text-invert !default
 
 $slide--warning-background: $c-warning !default
 $slide--warning-color: $c-text-invert !default
+
+// -------------------------------------
+//   Base
+// -------------------------------------
+
+// ----- Borders & Box Shadow ----- //
+
+$b-borderStyle: solid !default
+$b-borderWidth: 4px !default
+$b-border: $b-borderWidth $b-borderStyle $c-border
+$b-borderRadius: 3px !default
+$b-boxShadow: 0 1px 2px rgba(#222, 0.25) !default
+
+// ----- Typography ----- //
+
+$b-fontFamily-heading-fontWeight: bold !default
+$b-fontFamily-heading-uppercase: true !default
+$b-fontFamily-heading: 'Oswald', sans-serif !default
+$b-fontFamily-light-fontWeight: 300 !default
+$b-fontFamily-mono: Courier, monospace !default
+$b-fontFamily: 'Merriweather', sans-serif !default
+$b-fontSize-h1: 420% !default
+$b-fontSize-h2: 320% !default
+$b-fontSize-h3: 220% !default
+$b-fontSize-h4: 175% !default
+$b-fontSize-l: 150% !default
+$b-fontSize-m: 100% !default
+$b-fontSize-s: 80% !default
+$b-fontSize-xl: 200% !default
+$b-fontSize-xs: 60% !default
+$b-fontSize: 30px !default
+$b-lineHeight: 1.5 !default
+$b-textShadow: 6px 6px 0 rgba(#000, 0.25), 12px 12px 0 rgba(#000, 0.1) !default
+
+// ----- Sizing ----- //
+
+$b-minWidth: em(400px) !default
+$b-maxWidth: em(680px)default
+$b-space: em(40px) !default
+$b-space-xs: 0.25 * $b-space !default
+$b-space-s: 0.5 * $b-space !default
+$b-space-l: 2 * $b-space !default
+$b-space-xl: 4 * $b-space !default
+
+// ----- Settings ----- //
+
+$b-transitionSpeed: 0.4s !default
+
+// ----- Breakpoint ----- //
+
+$breakpoint-l: 1400px !default
+
+// -------------------------------------
+//   Components
+// -------------------------------------
+
+// ----- Grid ----- //
+
+// Breakpoints
+
+$g-s: em(480px)
+$g-m: em(800px)
+$g-l: em(1024px)
+
+// Settings
+
+$g-columns: 12
+$g-defaults: 's' $g-s, 'm' $g-m, 'l' $g-l
+$g-gutter: 20px
+$g-silent: false
+
+// Selector
+
+$g-selector: if($g-silent, unquote("%"), unquote("."))
 
 // -------------------------------------
 //   Structures
