Use glob importing in application.sass

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -5,47 +5,41 @@
 //
 // *************************************
 
-@import "config"
+@import 'config'
 
 // -------------------------------------
 //   Foundation
 // -------------------------------------
 
-@import "foundation/reset"
-@import "foundation/helpers"
-@import "foundation/config"
-@import "foundation/base"
+@import 'foundation/reset'
+@import 'foundation/helpers'
+@import 'foundation/config'
+@import 'foundation/base'
 
 // -------------------------------------
 //   Components
 // -------------------------------------
 
-@import "components/bucket"
-@import "components/card"
-@import "components/cell"
-@import "components/grid"
-@import "components/row"
+@import 'components/*'
 
 // -------------------------------------
 //   Structures
 // -------------------------------------
 
-@import "structures/progress"
-@import "structures/slide"
+@import 'structures/*'
 
 // -------------------------------------
 //   Vendor
 // -------------------------------------
 
-@import "vendor/github"
+@import 'vendor/github'
 
 // -------------------------------------
 //   Foundation - Tools
 // -------------------------------------
 
-@import "foundation/tools"
+@import 'foundation/tools'
 
 // -------------------------------------
 //   Inbox
 // -------------------------------------
-
