Update spacing, comments in Sass files

--- a/source/assets/stylesheets/components/_bucket.sass
+++ b/source/assets/stylesheets/components/_bucket.sass
@@ -4,6 +4,18 @@
 //   -> Based on:
 //      * http://jsfiddle.net/necolas/rZvEF/
 //
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .bucket[flag]
+//
+//   .bucket-media
+//     / ...
+//
+//   .bucket-content
+//     / ...
+//
 // *************************************
 
 .bucket
@@ -36,6 +48,7 @@
 .bucket-media
   float: left
   margin-right: $b-space
+
   > img
     display: block
     max-width: none
