--- a/source/assets/stylesheets/components/_cell.sass
+++ b/source/assets/stylesheets/components/_cell.sass
@@ -3,10 +3,16 @@
 //   Cell
 //   -> Width-limiting blocks
 //
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .cell[s]
+//   / ...
+//
 // *************************************
 
 .cell
   margin: $b-space auto
   max-width: $b-maxWidth
   position: relative
-
