--- a/source/assets/stylesheets/components/_row.sass
+++ b/source/assets/stylesheets/components/_row.sass
@@ -3,6 +3,13 @@
 //   Row
 //   -> Width-spanning blocks
 //
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .row[a]
+//   / ...
+//
 // *************************************
 
 .row
@@ -13,6 +20,7 @@
 //   Modifiers
 // -------------------------------------
 
+// ----- Hierarchy ----- //
+
 .row--a
   background: $c-highlight
-
