--- a/source/assets/stylesheets/structures/_progress.sass
+++ b/source/assets/stylesheets/structures/_progress.sass
@@ -1,7 +1,13 @@
 // *************************************
 //
 //   Progress
-//   -> Progress indicator
+//   -> Progress bar
+//
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .progress
 //
 // *************************************
 
@@ -13,4 +19,3 @@
   left: 0
   position: absolute
   z-index: 20
-
